--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/react": "^9.23.4",
     "@trpc/server": "^9.23.4",
     "next": "12.1.6",
+    "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-query": "^3.39.0",
