--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/server": "^9.23.4",
     "next": "12.1.6",
     "prisma": "^3.14.0",
+    "random-word-slugs": "^0.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-query": "^3.39.0",
