--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trpc/next": "^9.23.4",
     "@trpc/react": "^9.23.4",
     "@trpc/server": "^9.23.4",
+    "copy-to-clipboard": "^3.3.1",
     "next": "12.1.6",
     "prisma": "^3.14.0",
     "random-word-slugs": "^0.1.6",
