--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.16.0"
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
